new projekt folder 2

--- a/Code/System2/Debug/makefile
+++ b/Code/System2/Debug/makefile
@@ -104,19 +104,19 @@ endif
 # Add inputs and outputs from these tool invocations to the build variables 
 
 # All Target
-all: System.out
+all: System2.out
 
 # Tool invocations
-System.out: $(GEN_CMDS) $(CMD_SRCS) $(OBJS)
+System2.out: $(GEN_CMDS) $(CMD_SRCS) $(OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: Linker'
-	"C:/Program Files (x86)/Texas Instruments/ccsv4/tools/compiler/C5500 Code Generation Tools 4.3.9/bin/cl55" -v5515 -g --diag_warning=225 --ptrdiff_size=16 --memory_model=large -z -m"System.map" --warn_sections -i"C:/Program Files (x86)/Texas Instruments/ccsv4/tools/compiler/C5500 Code Generation Tools 4.3.9/lib" -i"C:/Program Files (x86)/Texas Instruments/ccsv4/tools/compiler/C5500 Code Generation Tools 4.3.9/include" --reread_libs --rom_model -o "System.out" $(ORDERED_OBJS)
+	"C:/Program Files (x86)/Texas Instruments/ccsv4/tools/compiler/C5500 Code Generation Tools 4.3.9/bin/cl55" -v5515 -g --diag_warning=225 --ptrdiff_size=16 --memory_model=large -z -m"System2.map" --warn_sections -i"C:/Program Files (x86)/Texas Instruments/ccsv4/tools/compiler/C5500 Code Generation Tools 4.3.9/lib" -i"C:/Program Files (x86)/Texas Instruments/ccsv4/tools/compiler/C5500 Code Generation Tools 4.3.9/include" --reread_libs --rom_model -o "System2.out" $(ORDERED_OBJS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(C5500_EXECUTABLE_OUTPUTS__QTD) "System.out"
+	-$(RM) $(C5500_EXECUTABLE_OUTPUTS__QTD) "System2.out"
 	-$(RM) ".\FIR.obj" ".\ezdsp_setup.obj" ".\main.obj" 
 	-$(RM) ".\FIR.pp" 
 	-$(RM) ".\ezdsp_setup.pp" ".\main.pp" 
